eureka-client/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-client
  namespace: demo-eureka
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: eureka-client
  type: LoadBalancer
